Bug 136523 - Stripes in gradient in presentation mode Skia Raster/Vulkan
Summary: Stripes in gradient in presentation mode Skia Raster/Vulkan
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0
Keywords:
: 138244 (view as bug list)
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-09-06 18:53 UTC by Telesto
Modified: 2023-02-24 23:01 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (15.14 KB, application/vnd.oasis.opendocument.presentation)
2020-09-06 18:54 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-09-06 18:53:52 UTC
Description:
Stripes in gradient in presentation mode Skia Raster/Vulkan

Steps to Reproduce:
1. Open the attached file
2. F5

Actual Results:
Stripes

Expected Results:
No strips (same as in edit mode)


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: e8b8e7be0b2ad693224cd94062a55610eb69df7e
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Vulkan; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2020-09-06 18:54:08 UTC
Created attachment 165206 [details]
Example file
Comment 2 Luboš Luňák 2020-09-24 12:39:11 UTC
CanvasHelper::fillTexturedPolyPolygon()
Comment 3 Telesto 2020-11-16 21:05:29 UTC
*** Bug 138244 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2020-11-17 18:27:05 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a46cb5dc607d1d1af402ff3e8fce731e7427854d

try to use directly VCL's DrawGradient() in vclcanvas (tdf#136523)

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.