try to use directly VCL's DrawGradient() in vclcanvas (tdf#136523)

VCL implementations may have an optimized implementation,
and with Skia decomposing to polygons also causes drawing problems.

Change-Id: Ib1e317c627f01a43b77b9a8ee2335f4e319c37e2